--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
   "author": "Matt Williams",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "3.3.7",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "5.0.0-alpha.8",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "toastr": "2.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
