--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/mtwilliams5/react-gift-list"
   },
   "jest": {
     "moduleNameMapper": {
